# translator-deep-purpose

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.yml  pyproject.toml
notebooks/: DTIprediction.ipynb  predict_csv.ipynb  predict_list.ipynb  repurpose.ipynb  repurposing_for_T2D.ipynb
notebooks/drkg-gnn-explanations/: AssessExplainability.ipynb  README.md  TrainGNN-Copy1.ipynb  TrainGNN.ipynb  evidence_path_drkg.ipynb
notebooks/drkg-gnn-explanations/GNNModels/: DrugDiseaseGAT  DrugDiseaseGCN  DrugDiseaseGraphSAGE  GAT  GCN  GraphSAGE
notebooks/drkg-gnn-explanations/Input/: entity_dictionary_alzheimer.json  entity_dictionary_alzheimer_drug_disease.json
notebooks/drkg-gnn-explanations/Input/predict_files/: disease-hpo.csv
scripts/: train.sh
src/: CombineDrugsTargets.ipynb  DTI_prediction_for_Alzheimer.ipynb  data_loading.ipynb  deep.ipynb  deep.py  predict.py  repurpose.ipynb  repurpose.py  repurposing_for_Alzheimer.ipynb  self_test_dataset.ipynb  train.py
src/translator_deep_purpose/: __init__.py  predict.py  train.py
